--- a/config.json
+++ b/config.json
@@ -7,6 +7,7 @@
             "commandsFolder": "commands"
         },
         "startupFunctions": [
+            "STARTUP_DBConnection",
             "STARTUP_initCommands"
         ],
         "setupFunctions": [
