--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "name": "testbot to get used to new api",
+    "name": "NicasheeBot",
     "clientId": "395581313052180483",
     "setup": {
         "moduleFolders": {
