--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "discord.js": "^13.1.0",
     "erlpack": "github:discord/erlpack",
     "mysql2": "^2.3.2",
+    "pretty-ms": "^7.0.1",
     "sequelize": "^6.7.0",
     "utf-8-validate": "^5.0.6",
     "zlib-sync": "^0.1.7"
