--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "discord-api-types": "^0.23.1",
     "discord.js": "^13.1.0",
     "erlpack": "github:discord/erlpack",
+    "moment": "^2.29.1",
     "mysql2": "^2.3.2",
     "pretty-ms": "^7.0.1",
     "sequelize": "^6.7.0",
