--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,8 +5,7 @@ name: Deploy
 
 on:
   push:
-    branches: [ ]
-    # branches: [ master ] - disabled due to still in dev
+    branches: [ master ]
 
 jobs:
   build:
