disabled container spinup

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,5 +32,5 @@ jobs:
       #   run: sequelize db:migrate
 
       # - name: Spin up all other containers
-      - name: Spin up containers
-        run: docker-compose up -d
+      # - name: Spin up containers
+      #   run: docker-compose up -d
