--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.25.2"
+  },
+  "dependencies": {
+    "@discordjs/builders": "^0.7.0"
   }
 }
