--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@discordjs/builders": "^0.7.0",
     "bufferutil": "^4.0.5",
-    "discord.js": "^13.2.0"
+    "discord.js": "^13.2.0",
+    "moment": "^2.29.1"
   }
 }
