--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@discordjs/builders": "^0.7.0",
     "bufferutil": "^4.0.5",
     "discord.js": "^13.2.0",
-    "moment": "^2.29.1"
+    "moment": "^2.29.1",
+    "mysql2": "^2.3.2",
+    "sequelize": "^6.8.0"
   }
 }
