--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "discord.js": "^13.2.0",
     "moment": "^2.29.1",
     "mysql2": "^2.3.2",
+    "pretty-ms": "^7.0.1",
     "sequelize": "^6.8.0"
   }
 }
