--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "moment": "^2.29.1",
     "mysql2": "^2.3.2",
     "pretty-ms": "^7.0.1",
-    "sequelize": "^6.8.0"
+    "sequelize": "^6.8.0",
+    "utf-8-validate": "^5.0.7"
   }
 }
