--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mysql2": "^2.3.2",
     "pretty-ms": "^7.0.1",
     "sequelize": "^6.8.0",
-    "utf-8-validate": "^5.0.7"
+    "utf-8-validate": "^5.0.7",
+    "zlib-sync": "^0.1.7"
   }
 }
