--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,13 +24,5 @@ jobs:
       - name: Build app
         run: docker-compose build
 
-      # - name: Spin up DB
-      # run: docker-compose up -d db
-
-      # - name: Update DB structure
-      #   run: npm i sequelize-cli
-      #   run: sequelize db:migrate
-
-      # - name: Spin up all other containers
-      # - name: Spin up containers
-      #   run: docker-compose up -d
+      - name: Spin up containers
+        run: docker-compose up -d
