renamed env vars

--- a/dist_.env
+++ b/dist_.env
@@ -2,10 +2,10 @@
 NODE_ENV=development
 devGuild=730609289110224947
 # tokens
-DISCORD_BOT_TOKEN=***********************.*************************************
+DCtoken=***********************.*************************************
 # database
-DB_USERNAME=********
-DB_PASSWORD=********************
-DB_DATABASE=********
-DB_HOST=********
+DBusername=********
+DBpassword=********************
+DBdatabase=********
+DBhost=********
 DBdialect=mysql
