--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,11 +5,11 @@ services:
       context: ./
     restart: always
     environment:
-      BotToken: ${DISCORD_BOT_TOKEN}
-      DB_HOST: gurglebot_db_gb_1
-      DBName: gurglebot
-      DB_user: gurglebot
-      DBPassw: ${DB_PASSWORD}
+      DCtoken: ${DISCORD_BOT_TOKEN}
+      DBdatabase: gurglebot
+      DBhost: gurglebot_db_gb_1
+      DBusername: gurglebot
+      DBpassword: ${DB_PASSWORD}
 
 networks:
   default:
