--- a/config.json
+++ b/config.json
@@ -1,6 +1,5 @@
 {
     "name": "NicasheeBot",
-    "clientId": "395581313052180483",
     "guildId": "730609289110224947",
     "teamRole": "730609289256894469",
     "ownerRole": "730609289261088792",
@@ -27,5 +26,5 @@
         "dateFormats": ["YYYY/MM/DD", "DD/MM/YYYY"],
         "logChannelID": "892536217458057246"
     },
-    "aboutText": "./config/about.txt"
+    "aboutText": "./about.txt"
 }
