--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,6 +1,3 @@
-# This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
-
 name: Deploy
 
 on:
@@ -9,7 +6,7 @@ on:
 
 jobs:
   build:
-    runs-on: mainserverJulian
+    runs-on: stardrive
 
     env:
       DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
@@ -19,10 +16,10 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Update 3rd party docker containers
-        run: docker-compose pull
+        run: docker compose pull
 
       - name: Build app
-        run: docker-compose build
+        run: docker compose build
 
       - name: Spin up containers
-        run: docker-compose up -d
+        run: docker compose up -d
