[fix] wrong container name

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     environment:
       DCtoken: ${DISCORD_BOT_TOKEN}
       DBdatabase: gurglebot
-      DBhost: gurglebot-bot_gb-1
+      DBhost: gurglebot-db_gb-1
       DBusername: gurglebot
       DBpassword: ${DB_PASSWORD}
 
