--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@discordjs/builders": "^1.5.0",
     "bufferutil": "^4.0.7",
     "discord.js": "^14.8.0",
+    "handlebars": "^4.7.8",
     "jsdom": "^20.0.0",
     "moment": "^2.29.4",
     "mysql2": "^2.3.3",
