--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,6 +12,7 @@ jobs:
       DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
       DISCORD_BOT_TOKEN_NB: ${{ secrets.DISCORD_BOT_TOKEN_NB }}
       DISCORD_BOT_TOKEN_SB: ${{ secrets.DISCORD_BOT_TOKEN_SB }}
+      DISCORD_BOT_TOKEN_DGB: ${{ secrets.DISCORD_BOT_TOKEN_DGB }}
 
     steps:
       - uses: actions/checkout@v2
