added bot config

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,6 +13,7 @@ jobs:
       DISCORD_BOT_TOKEN_NB: ${{ secrets.DISCORD_BOT_TOKEN_NB }}
       DISCORD_BOT_TOKEN_SB: ${{ secrets.DISCORD_BOT_TOKEN_SB }}
       DISCORD_BOT_TOKEN_DGB: ${{ secrets.DISCORD_BOT_TOKEN_DGB }}
+      DISCORD_BOT_TOKEN_TTD: ${{ secrets.DISCORD_BOT_TOKEN_TTD }}
 
     steps:
       - uses: actions/checkout@v2
